scrollbar fix

--- a/src/styles/views/Overview.scss
+++ b/src/styles/views/Overview.scss
@@ -18,7 +18,7 @@
   }
   &.container {
     overflow: hidden; /* Allow content to overflow outside the padding */
-    max-height: 65vh;
+    height: fit-content;
     width: 1300px;
     background: black;
     padding: 2em;
@@ -72,7 +72,7 @@
   }
   &.player-container {
     position: relative;
-    max-height: 575px;
+    max-height: 525px;
     overflow-y: auto;
     overflow-x: hidden;
     width: fit-content;
@@ -81,7 +81,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: $dropShadow;
     scrollbar-width: thin; /* Can be "auto", "thin", or "none" */
     scrollbar-color: rgba(44, 44, 44, 1) black; /* thumb and track color */
     padding-right: 10px;
